Automatically add the --enable-preview thing